--- a/bibliography.bib
+++ b/bibliography.bib
@@ -65,7 +65,7 @@
    title = "The Elements of Style: Classic Edition",
    publisher = "Spectrum Ink Publisher",
    edition = "1st edition",
-   Publisher: Spectrum Ink (23 July 2018),
+   Publisher= "Spectrum Ink (23 July 2018)",
   ISBN =  "978-1-64399-000-2",
    year = 2018
    }
