remove some warnings in bibtex

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -21,7 +21,7 @@
 @BOOK{chicago,
  	author={Webster, Gretchen},
    title = "{The Chicago Manual of Style}",
-   publisher = "University of Chicago Press",
+   publisher = "{University of Chicago Press}",
    edition = "17th edition",
    year = 2017,
    pages = "400--401",
@@ -65,8 +65,7 @@
    title = "The Elements of Style: Classic Edition",
    publisher = "Spectrum Ink Publisher",
    edition = "1st edition",
-   Publisher= "Spectrum Ink (23 July 2018)",
-  ISBN =  "978-1-64399-000-2",
+   ISBN =  "978-1-64399-000-2",
    year = 2018
    }
 
