--- a/defaults.tex
+++ b/defaults.tex
@@ -25,5 +25,5 @@
 \scholaryear{2016-2017}
 
 % Department
-\department{Departamento de Engenharia de Electrónica e Telecomunicações e de Computadores}
+\department{Departamento de Engenharia Electrónica e Telecomunicações e de Computadores}
 
