--- a/defaults.tex
+++ b/defaults.tex
@@ -15,7 +15,7 @@
 \majorfield{Engenharia Informática e de Computadores}
 
 % Thesis type: Dissertion or Final Project
-\thesistype{[Dissertação | Projecto Final]}
+\thesistype{[Dissertação | Trabalho de Projeto]}
 
 %% only for Report document
 % course
