--- a/template.tex
+++ b/template.tex
@@ -1,4 +1,4 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% iselthesis.cls
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%% ISEL/IPL Dissertation document class
 %%%
 %%% By Matilde Pós-de-Mina Pato (matilde.pato@isel.pt)
@@ -10,9 +10,13 @@
 %%% Version v2.5: December 2019
 %%% Version v2.5.1.: February 2020
 %%% Version v2.5.2.: March 2020
-%%% Version v2.5.3.: June 2020
-%%% Version v3.0.: May 2024
-%%% Version v4.0.: June 2024
+%%% Version v2.5.3.: (June 2020) 
+%%% Version v2.6.: (September 2020) 
+%%% Version v2.6.1.: (January 2020) 
+%%% Version v2.6.2: (October 2022)
+%%% Version v3.0: May 2024
+%%% Version v4.0: June 2024
+%%% 
 %%% 
 %%% This template is vaguely based on a template from the
 %%%     Universidade Nova de Lisboa (NOT OFFICIAL)
