Fix some errors and add Copyright

--- a/Config/_cover.tex
+++ b/Config/_cover.tex
@@ -40,8 +40,9 @@
 %        You may use "\\" to force line breaks
 % -------------------------------------------------------------------
 
-\nctitle(main,en){Thesis Title}%
-\nctitle(main,pt){Título de Tese de Mestrado}%
+% Just a heads-up: at ISEL, we don't translate dissertation names, so I'd suggest keeping it in the original language.
+\nctitle(main,en){Master Thesis Title}%
+\nctitle(main,pt){Master Thesis Title}%
 
 % -------------------------------------------------------------------
 % SUBMISSION DATE
