--- a/Config/_packages.tex
+++ b/Config/_packages.tex
@@ -16,7 +16,7 @@
 % \restylefloat{figure}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
 \usepackage{metalogo}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
 \usepackage{lipsum}       % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\usepackage{url} 
+
 %%============================================================
 %%  ADD YOUR PACKAGES AND OTHER CUSTOMIZATIONS HERE
 %%============================================================
@@ -31,6 +31,9 @@
 %------------------------------------------------------------------
 % Customization of some packages
 %------------------------------------------------------------------
+
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
 
 % Where to look for figures
 % \prependtographicspath{{some-folder-here}}
