--- a/Config/_files.tex
+++ b/Config/_files.tex
@@ -61,7 +61,7 @@
 % BibTeX bibliography files and customization.
 % May be used multiple times with a single file nae each time.
 % syntax: \addbibfile{filename.bib}
-\addbibfile{bibliography}
+\addbibfile{Bibliography/bibliography}
 %\addbibfile{anotherbibfile.bib}
 
 %%------------------------------------------------------------
