--- a/changelog.txt
+++ b/changelog.txt
@@ -9,3 +9,5 @@
 + add support for both Appendixes and Annexes.
 *2024-09-17 — Version 4.0.1
 + Computer Modern Bright fonts do not support details and special characters. For this reason, the font of the sections is modified in the defaults.clo file
+*2024-09-26 — Version 4.0.1
++ Add Copyright and fix some minor errors.
