--- a/template.tex
+++ b/template.tex
@@ -16,6 +16,7 @@
 %%% Version v2.6.2: (October 2022)
 %%% Version v3.0: May 2024
 %%% Version v4.0: June 2024
+%%% Version v4.0.1: September 2024
 %%% 
 %%% 
 %%% This template is vaguely based on a template from the
@@ -127,7 +128,7 @@
 % --------------------------------------------------------
 \ncthesismainmatter	    % The main text
 % --------------------------------------------------------
-\ncprintchapters        % Print document chapters		
+\printchapters        % Print document chapters		
 \printbib		        % Print the bibliography
 \printotherlists 	    % If option 'otherlistsat=back', print other lists of contents according to instructions given above, otherwise do nothing
 
