Fix some errors in bibliography

--- a/ISELthesis-files/manual-bib.bib
+++ b/ISELthesis-files/manual-bib.bib
@@ -1,6 +1,6 @@
 @Manual{iselthesis,
 	title        = {{The ISELthesis \LaTeX\ Template's Manual}},
-	author       = {Matilde M.P. Pato},
+	author       = {Matilde Pato},
 	organization = {Instituto Superior de Engenharia de Lisboa (ISEL-IPL)},
 	year         = {2024},
 	url          = {https://github.com/matpato/iselthesis},
