Change logo, and remove from second cover page.

--- a/Config/_cover.tex
+++ b/Config/_cover.tex
@@ -16,6 +16,7 @@
 % SYNTAX: \ncauthorname(gender){full name}{abbreviated name}
 %          Use [f] for female and [m] for male
 % -------------------------------------------------------------------
+%%% IMPORTANT: The cover must be written in Portuguese. All information must be presented in Portuguese. Any content presented in English must be translated to comply with the rules defined by ISEL's CTC. %%% 
 
 \ncauthorname(m){John Very Longname Doe}{John Doe}
 
@@ -24,8 +25,8 @@
 % SYNTAX: \ncauthordegree{degree}
 % -------------------------------------------------------------------
 
-\ncauthordegree(en){BSc}
-\ncauthordegree(pt){Licenciatura}
+\ncauthordegree(en){Licenciado} 
+\ncauthordegree(pt){Licenciado}
 
 % -------------------------------------------------------------------
 
