Fix bugs in bachelor project and change the institutional logo

--- a/iselthesis.cls
+++ b/iselthesis.cls
@@ -289,7 +289,8 @@
   \setcounter{@iselthesis@cnt}{0}%	reset counter used in the name listing
   \ifthenelse{%
   	\equal{\iselthesis@opt@docdegree}{msc}%
-	}%
+	  \OR\equal{\iselthesis@opt@docdegree}{bsc}%  % This line enables BSc second cover
+    }%
 	{
     \thispagestyle{empty}%
     \selectthelanguage{\iselthesis@opt@coverlang}%
