--- a/template.tex
+++ b/template.tex
@@ -17,6 +17,7 @@
 %%% Version v3.0: May 2024
 %%% Version v4.0: June 2024
 %%% Version v4.0.1: September 2024
+%%% Version v4.0.2: June 2025
 %%% 
 %%% 
 %%% This template is vaguely based on a template from the
